// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Loader /> renders and matches the snapshot 1`] = `
<div
  className="p-loader p-text--default"
>
  <i
    className="p-icon--spinner u-animation--spin"
  />
</div>
`;

exports[`<Loader /> renders and matches the snapshot with text 1`] = `
<div
  className="p-loader p-text--default"
>
  <i
    className="p-icon--spinner u-animation--spin"
  />
  <span
    className="p-icon__text"
  >
    foo
  </span>
</div>
`;
